--- a/templates/main.html
+++ b/templates/main.html
@@ -191,7 +191,7 @@
 <body>
     <div class="button-container" id="buttonContainer">
         <a href="statistics.html" class="transition-button">Compare Rent</a>
-        <a href="potential.html" class="transition-button">View Listings</a>
+        <a href="{{ url_for('potential') }}" class="transition-button">View Listings</a>
         <a href="#aboutDiv" class="transition-button">About</a>
     </div>
     <div id="circle" onclick="transitionButtons()">
