--- a/templates/potential.html
+++ b/templates/potential.html
@@ -135,6 +135,7 @@
         };
         function updateDisplay() {
             // Update the displayed value
+            console.log(cachedData);
             const parsedData = JSON.parse(cachedData);
 
             // Execute the Python script and capture its output
@@ -144,7 +145,7 @@
             // .catch(error => {
             //   console.error('Error fetching data:', error);
             // });
-            // console.log(pythonOutput);
+            // console.log(cachedData);
             const noise = "No data";
             const experience = "No data";
             document.getElementById('data-display').innerHTML = `
