--- a/templates/potential.html
+++ b/templates/potential.html
@@ -20,7 +20,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Property Search</title>
+    <div id="title-container">
+        <h1 id="title">Available Listings</h1>
+        <h2>Browse listings that rentors have <br> marked as "unsigned"!</h2>
+    </div>
+
 </head>
 
 <body>
