--- a/templates/potential.html
+++ b/templates/potential.html
@@ -20,18 +20,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <div id="title-container">
-        <h1 id="title">Available Listings</h1>
-        <h2>Browse listings that rentors have <br> marked as "unsigned"!</h2>
-    </div>
+    <title>Available Listings</title>
 
 </head>
 
 <body>
 
-    <!-- title cont -->
     <div id="title-container">
-        <h1 id="title">Property Search</h1>
+        <h1 id="title">Available Listings</h1>
+        <h2>Browse listings that rentors have <br> marked as "unsigned"!</h2>
     </div>
 
     <div id="out-map"><div id="map"></div></div>
