--- a/templates/potential.html
+++ b/templates/potential.html
@@ -150,7 +150,7 @@
             const noise = "No data";
             const experience = "No data";
             document.getElementById('data-display').innerHTML = `
-                <p>Address: ${parsedData[i][0]}</p>
+                <h2>Address: ${parsedData[i][0]}</h2>
                 <p>Price: ${parsedData[i][1]}</p>
                 <p>Beds: ${parsedData[i][2]}</p>
                 <p>Baths: ${parsedData[i][3]}</p>
