--- a/static/potential.css
+++ b/static/potential.css
@@ -58,6 +58,7 @@ h2 {
     height: 100%;
     border-radius: 9px;
     background-color:var(--background-color);
+    padding: 20px;
 }
 #title-container {
     position: absolute;
@@ -80,16 +81,17 @@ h2 {
 p{
     font-family: 'Montserrat', sans-serif;
     font-size: 25px;
-    font-weight: 300px;
+    font-weight: 350px;
 }
 button {
     background-color:transparent;
     color: black; 
-    font-size: 18px; 
+    font-size: 25px; 
     border: none;
     padding: 10px 20px; 
     cursor: pointer; 
     transition: background-color 0.3s ease; 
+    border-radius: 9px;
 }
 
 button:hover {
