--- a/templates/current.html
+++ b/templates/current.html
@@ -127,7 +127,7 @@
     <div class="hiddenmap" id="map"></div>
     
 
-    <form id="currentPosting" action="{{ url_for('form_submission') }}" method="POST">
+    <form id="currentPosting" action="{{ url_for('handle_form_submission') }}" method="POST">
         <h2>General Questions</h2>
         
         <label for="status">Do you plan to resign your current lease?</label><br>
