--- a/templates/potential.html
+++ b/templates/potential.html
@@ -8,6 +8,7 @@
     <!-- Include Leaflet CSS and JS -->
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Tinos:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
         integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
@@ -150,7 +151,7 @@
             const noise = "No data";
             const experience = "No data";
             document.getElementById('data-display').innerHTML = `
-                <h2>Address: ${parsedData[i][0]}</h2>
+                <h1 style=\"padding:0;\">Address: ${parsedData[i][0]}</h1>
                 <p>Price: ${parsedData[i][1]}</p>
                 <p>Beds: ${parsedData[i][2]}</p>
                 <p>Baths: ${parsedData[i][3]}</p>
