--- a/templates/potential.html
+++ b/templates/potential.html
@@ -122,7 +122,7 @@
                 // Update the display or perform other actions
                 return result;
             } catch (error) {
-                console.error('Error fetching data:', error);
+                
             }
         }
 
@@ -138,19 +138,16 @@
             i--;
             updateDisplay();
         };
-        function updateDisplay() {
+        async function updateDisplay() {
             // Update the displayed value
             console.log(cachedData);
-            const parsedData = JSON.parse(cachedData);
 
-            // Execute the Python script and capture its output
-            // const pythonOutput = fetchMore(parsedData[i][0]).then(result => {
-            //   const pythonOutput = result.toString();
-            // })
-            // .catch(error => {
-            //   console.error('Error fetching data:', error);
-            // });
-            // console.log(cachedData);
+            // Update the displayed value
+            const parsedData = JSON.parse(cachedData);
+            const encoded = encodeURIComponent(parsedData[i][0])
+            const pythonOutput = await fetchDataFromEndpoint('app.py/potential/checkHouse', encoded);
+            console.log(pythonOutput);
+            const resignOrNah = "Unknown";
             const noise = "No data";
             const experience = "No data";
             document.getElementById('data-display').innerHTML = `
